fixed css, localization, added text align for description

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,10 @@
 /* Reset */
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5,
 h6, p, blockquote, pre, a, abbr, acronym, address, big,
-cite, code,del, dfn, em, img, ins, kbd, q, s, samp,small,
+cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small,
 strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt,
-dd, ol, ul, li,fieldset, form, label, legend, table, caption,
-tbody, tfoot, thead, tr, th, td,article, aside, canvas, details,
+dd, ol, ul, li, fieldset, form, label, legend, table, caption,
+tbody, tfoot, thead, tr, th, td, article, aside, canvas, details,
 embed, figure, figcaption, footer, header, hgroup, menu, nav,
 output, ruby, section, summary, time, mark, audio, video {
     margin: 0;
@@ -13,11 +13,11 @@ output, ruby, section, summary, time, mark, audio, video {
     vertical-align: baseline;
 }
 
-img,fieldset, a img
+img, fieldset, a img {
     border: none;
-div, input, textarea, select,button,
+}
 
-h1,h2,h3,h4,h5,h6,a,span,a:focus {
+div, input, textarea, select, button, h1, h2, h3, h4, h5, h6, a, span, a:focus {
     outline: none;
 }
 
